# LinuxAntivirus

./: .gitignore  CMakeLists.txt  README.md  main.cc  testdira.cc
.github/workflows/: cmake.yml
src/antivirus/headers/: Antivirus.h  Directories.h  FilesList.h  Mode.h  NecessaryFilesList.h  Scan.h
src/antivirus/sources/: Antivirus.cc  CMakeLists.txt  Directories.cc  FilesList.cc  Mode.cc  NecessaryFilesList.cc  Scan.cc
